@@ -9,6 +9,7 @@ Bugs:
 - 3344917: Beam, file leak
 - 3528819: Crash in getInstance when instance has NULL properties
 - 3530609: Various BEAM Errors
+- 3435363: Wrong call of curl_global_cleanup()
 
 Changes in 2.2.3
 ================
